[package]
name = "example-gated-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_gated_program"

[features]
default = []
cpi = [ "no-entrypoint" ]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [ "anchor-lang/idl-build" ]

[dependencies]
# Solana & Agave
anchor-lang = { workspace = true, features = ["init-if-needed"] }

# Locals
proxy = { workspace = true, features = ["no-entrypoint"] }
